<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/buttonadd"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:cardElevation="8dp"
                app:cardCornerRadius="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        android:text="@string/text_name"
                        android:layout_marginBottom="8dp"/>

                    <EditText
                        android:id="@+id/userName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_name"
                        android:textSize="18sp"
                        android:textStyle="italic"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:text="@string/burgers"
                android:textStyle="bold"
                android:textSize="24sp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroupBurger"
                app:singleSelection="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/complet"
                    android:textSize="18sp"
                    android:id="@+id/chip_completa"
                    style="@style/Widget.MaterialComponents.Chip.Choice" />

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/chip_vegana"
                    android:text="@string/vegan"
                    android:textSize="18sp"
                    style="@style/Widget.MaterialComponents.Chip.Choice" />

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/chip_conovo"
                    android:text="@string/withegg"
                    android:textSize="18sp"
                    style="@style/Widget.MaterialComponents.Chip.Choice" />

            </com.google.android.material.chip.ChipGroup>

            <TextView
                android:text="@string/drinks"
                android:textStyle="bold"
                android:textSize="24sp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroupDrink"
                app:singleSelection="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/chip_auga"
                    android:text="@string/water"
                    android:textSize="18sp"
                    style="@style/Widget.MaterialComponents.Chip.Choice" />

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/chip_refresco"
                    android:text="@string/refresco"
                    android:textSize="18sp"
                    style="@style/Widget.MaterialComponents.Chip.Choice" />

            </com.google.android.material.chip.ChipGroup>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/buttonadd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scrollView"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>